--- a/SalesWebMVC/Views/Home/Contact.cshtml
+++ b/SalesWebMVC/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contato";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Gabriel Alves Pereira Parreira<br />
+    Uberlandia, MG<br />
+    <abbr title="Phone">Telefone:</abbr>
+    (34) 9 9116-1346
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong> <a href="mailto:gabriel1996app@gmail.com">gabriel1996app@gmail.com</a><br />
+    <strong>Email:</strong> <a href="mailto:gabri.1996@hotmail.com">gabri.1996@hotmail.com</a>
 </address>
